# MyPostMan

./: README.md  RULES.md  main.py  plan.md  pyproject.toml  test_variable_resolution.py
src/: database.py  environment_manager.py  environments.json  global_variable_manager.py  global_variables.json  history_manager.py  main.py  main_ui.py  mypostman.db  request_list.json  request_list_manager.py  services.py  ui_components.py
src/managers/: __init__.py  environment_manager.py  execution_plan_manager.py  global_variable_manager.py  history_manager.py  mypostman.db  request_list_manager.py  scheduler_manager.py  settings_manager.py
src/models/: __init__.py  database.py  execution_plan.py  models.py
src/scripts/: __init__.py  sandbox.py
src/services/: __init__.py  execution_context.py  execution_engine.py  har_analyzer.py  recording_history_service.py  services.py  variable_resolver.py
src/ui/: __init__.py  main_ui.py  main_ui_clean.py  main_ui_fixed.py  ui_components.py
src/ui/components/: __init__.py  body_editor.py  key_value.py  request_runner.py  response_panel.py
src/ui/dialogs/: __init__.py  login_recorder_dialog.py  plan_detail_dialog.py  plan_editor_dialog.py  schedule_config_dialog.py  step_editor_dialog.py
src/ui/panels/: __init__.py  collapsible_list_panel.py  execution_history_panel.py  execution_monitor_panel.py  execution_plan_panel.py  history_list_panel.py  login_history_panel.py  request_list_panel.py  scheduled_tasks_panel.py  settings_panel.py  sidebar_drawer.py
test/: README.md  test_request_list_db.py  test_variable_resolution.py
